--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required Scripts -->
+    <link
+      rel="preload"
+      href="./images/websitebanner.webp"
+      as="image"
+      fetchpriority="high"
+    />
+    <link
+      rel="preload"
+      href="./images/websitebanner.jpg"
+      as="image"
+      fetchpriority="high"
+    />
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
-    <!-- End Scripts -->
-    <!-- Required Stylesheets -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -16,8 +25,6 @@
       href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css"
     />
     <link rel="stylesheet" href="./index.css" />
-
-    <!-- End Stylesheets -->
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,16 +43,17 @@
     />
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
-  <!-- Banner -->
   <div id="banner" class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
     <picture>
       <source srcset="./images/websitebanner.webp" type="image/webp" />
       <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-      <img class="w-100" src="./images/websitebanner.jpg" />
+      <img
+        class="w-100"
+        src="./images/websitebanner.jpg"
+        fetchpriority="high"
+      />
     </picture>
   </div>
-  <!-- End Banner -->
-  <!-- Navbar section -->
   <div id="navbar-container" class="container mx-auto p-0">
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-dark"
@@ -183,16 +191,10 @@
       </div>
     </div>
   </div>
-  <!-- End Navbar -->
-  <!-- Body content starts here -->
   <body>
-    <!-- Main content container -->
     <div class="px-3 container mx-auto bg pb-5">
-      <!-- Row for the first section -->
       <div class="row pt-5 mx-auto">
-        <!-- Left column for text -->
         <div class="col-lg-6">
-          <!-- Paragraphs explaining Adult Discussion Group and GLOW program -->
           <p>
             The <strong>Adult Discussion Group</strong> meets each Sunday before
             the service at <strong>9:30 AM</strong> in the overflow area at the
@@ -205,20 +207,17 @@
             our children's program, is held at the same time as the Sunday
             worship service.
           </p>
-          <!-- Paragraph explaining Kids' JAM program -->
           <p>
             Our <strong>Wednesday night</strong> program for youth
             <strong>kindergarten through 6th grade</strong> is
             <strong>Kids' <a href="/JAM.html">JAM</a></strong
             >. It runs <strong>6:00-7:30 PM</strong>.
           </p>
-          <!-- Paragraph about the staffed nursery -->
           <p>
             <strong>A staffed nursery is available</strong> for the care of
             young children during the worship service.
           </p>
         </div>
-        <!-- Right column for an image -->
         <div class="col-lg-2 align-self-center text-center">
           <img
             src="./images/Welcome.jpg"
@@ -228,13 +227,9 @@
           />
         </div>
       </div>
-      <!-- End of first section -->
 
-      <!-- Second section -->
       <div class="row mt-4 mx-auto">
-        <!-- Left column for text -->
         <div class="col-lg-4">
-          <!-- Introduction from Rev. Beth -->
           <div class="row text-center">
             <div class="col-lg 2">
               <h1>from Rev. Beth...</h1>
@@ -245,7 +240,6 @@
               </p>
             </div>
             <div class="col-lg 2 align-self-center">
-              <!-- Image of Rev. Beth -->
               <p>
                 <img
                   src="./images/PastorBeth2.jpg"
@@ -256,7 +250,6 @@
               </p>
             </div>
           </div>
-          <!-- Paragraphs with messages from Rev. Beth -->
           <p>
             For the Lenten worship season, including Lenten classes and church
             missions, we will be continuing our response to the recent violent
@@ -280,7 +273,6 @@
             >
           </p>
         </div>
-        <!-- Middle column for a welcome message -->
         <div class="col-lg-4 my-auto text-center">
           <h1>Welcome!</h1>
           <p>
@@ -291,21 +283,17 @@
               ></b
             >.
           </p>
-          <!-- Link to directions to the church -->
           <p>
             <a href="/directions.html"
               >Click here for directions on how to find us.</a
             >
           </p>
-          <!-- Contact information -->
           <p>Call us at: (515) 996-2572</p>
           <p>
             Email us at: <a href="mailto:office@vmumc.com">office@vmumc.com</a>
           </p>
         </div>
-        <!-- Right column for a calendar -->
         <div class="col-lg-4 text-center my-auto">
-          <!-- Embedded Google Calendar -->
           <iframe
             src="//www.google.com/calendar/embed?mode=AGENDA&height=300&wkst=1&bgcolor=%23cccccc&src=9k15r4oj9pihte8nr4s3ra7qag%40group.calendar.google.com&color=%23BE6D00&src=a8so3okd24r3jbjr546tastrg0%40group.calendar.google.com&color=%234A716C&src=5cm43rq8vd82m98u7odb5jjmas%40group.calendar.google.com&color=%23A32929&src=en.usa%23holiday%40group.v.calendar.google.com&color=%232952A3&ctz=America%2FChicago"
             style="border: none; overflow: hidden; border-width: 0"
@@ -314,17 +302,10 @@
           ></iframe>
         </div>
       </div>
-      <!-- End of second section -->
-      <!-- Third section -->
-      <!-- Row with margin top 4 -->
       <div class="row mx-auto mt-4">
-        <!-- Column with width 8 for main content -->
         <div class="col-lg-8">
-          <!-- First nested row -->
           <div class="row">
-            <!-- First nested column with width 6 for text content -->
             <div class="col-lg-6">
-              <!-- Paragraph with information about Ash Wednesday and Lent -->
               <p>
                 <strong>Ash Wednesday and Lent</strong>
                 <br />
@@ -336,9 +317,7 @@
                 on Easter.
               </p>
             </div>
-            <!-- Second nested column with width 3 for image -->
             <div class="col-lg-3 align-self-center text-center">
-              <!-- Image for Ash Wednesday and Lent -->
               <p>
                 <a href="/ciayouth.html">
                   <img
@@ -353,11 +332,8 @@
               </p>
             </div>
           </div>
-          <!-- Second nested row -->
           <div class="row">
-            <!-- First nested column with width 6 for text content -->
             <div class="col-lg-6">
-              <!-- Paragraph with information about S.W.A.G. Youth Group -->
               <p>
                 <strong>
                   S.W.A.G. Youth Group <br />
@@ -378,16 +354,13 @@
                 The youth groups (S.W.A.G.) will be volunteering at the Bidwell
                 Pantry.
               </p>
-              <!-- Additional paragraph with link to learn more about youth meetings and activities -->
               <p>
                 <a href="/ciayouth.html"
                   >Learn more about youth meetings and activites here.</a
                 >
               </p>
             </div>
-            <!-- Second nested column with width 3 for image -->
             <div class="col-lg-3 align-self-center text-center">
-              <!-- Image for S.W.A.G. Youth Group -->
               <p>
                 <a href="/ciayouth.html">
                   <img
@@ -402,9 +375,7 @@
             </div>
           </div>
         </div>
-        <!-- Column with width 4 and margin top 50 for UMC logo and church information -->
         <div class="col-lg-4 m-t-50">
-          <!-- UMC logo -->
           <p class="text-center">
             <img
               src="./images/UMClogo.jpg"
@@ -413,7 +384,6 @@
               alt="UMC logo - Open Hearts, Open Minds, Open Doors"
             />
           </p>
-          <!-- Church information -->
           <p>
             <b
               >The Van Meter Church is part of the
@@ -424,11 +394,8 @@
           </p>
         </div>
       </div>
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Kids' J.A.M. -->
           <p>
             <strong>
               Wednesday evenings
@@ -441,16 +408,13 @@
             This is our Wednesday night program for elementary-age students to
             learn the love of Jesus while having fun. Drop-ins are welcome.
           </p>
-          <!-- Additional paragraph with information about volunteering for Kids' J.A.M. -->
           <p>
             If you would like to volunteer to lend a hand with J.A.M. (for just
             one evening or several) call the church office or just sign up at
             the church.<br />
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image for Kids' J.A.M. -->
           <p>
             <a href="/JAM.html">
               <img
@@ -463,13 +427,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Third section -->
-      <!-- Fourth section -->
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Missions of the Month -->
           <p>
             <strong
               ><a href="/missionmoment.html">Missions of the Month</a><br
@@ -480,9 +439,7 @@
             guidance for the year.
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image for Missions of the Month -->
           <p>
             <a href="/missionmoment.html">
               <img
@@ -495,13 +452,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Fourth Section -->
-      <!-- Fifth section -->
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Good Samaritan Food Pantry -->
           <p>
             <strong>Good Samaritan Food Pantry in Adel<br /></strong> We are
             collecting toothbrushes (still in their unopened packages) for the
@@ -511,9 +463,7 @@
             >
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image of toothbrush -->
           <p>
             <img
               src="./images/missions_toothbrush2.png"
@@ -524,13 +474,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Fifth Section -->
-      <!-- Sixth section -->
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Adult Discussion Group -->
           <p>
             <strong>Sundays</strong>:<strong
               ><br />
@@ -542,9 +487,7 @@
             not required.
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image for Adult Discussion Group -->
           <p>
             <a
               href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship"
@@ -559,13 +502,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Sixth Section -->
-      <!-- Seventh section -->
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Worship Helper -->
           <p>
             <strong>Sign up to be a Worship Helper</strong><br />
             You may use
@@ -575,9 +513,7 @@
             or just talk to Leslie Herman.
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image for Worship Helper -->
           <p>
             <a
               href="https://www.signupgenius.com/go/4090D4BA4A82EA3FD0-worship"
@@ -592,13 +528,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Seventh Section -->
-      <!-- Eighth Section -->
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Nursery Available -->
           <p>
             <strong>Nursery Available</strong>
             <br />
@@ -606,9 +537,7 @@
             staffed nursery.
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image for Nursery Available -->
           <p>
             <a href="/Publications/ExerciseYourFaith.pdf">
               <img
@@ -621,13 +550,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Eighth Section -->
-      <!-- Ninth Section -->
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Exercise Your Faith -->
           <p>
             <strong>Exercise Your Faith</strong>
             <br />
@@ -638,9 +562,7 @@
             exercises (no floor work), encouragement, and sharing health tips.
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image for Exercise Your Faith -->
           <p>
             <a href="/Publications/ExerciseYourFaith.pdf">
               <img
@@ -653,13 +575,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Ninth Section -->
-      <!-- Tenth Section -->
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Bread Ministry -->
           <p>
             <strong>Bread Ministry</strong>
             <br />
@@ -673,9 +590,7 @@
             >
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image for Bread Ministry -->
           <p>
             <a href="/MinistryBread.html">
               <img
@@ -688,13 +603,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Tenth Section -->
-      <!-- Eleventh Section -->
-      <!-- Row with no margin -->
       <div class="row mx-auto">
-        <!-- Column with width 4 for main content -->
         <div class="col-lg-4">
-          <!-- Paragraph with information about Need Help -->
           <p>
             <strong>Need Help?</strong>
             <br />
@@ -705,9 +615,7 @@
             >
           </p>
         </div>
-        <!-- Column with width 3 for image -->
         <div class="col-lg-3 align-self-center text-center">
-          <!-- Image for Need Help -->
           <p>
             <a href="/Publications/Adel_Ministerial_Assn_Emergency_Fund.pdf">
               <img
@@ -720,13 +628,8 @@
           </p>
         </div>
       </div>
-      <!-- End of Eleventh Section -->
       <br />
-      <!-- Twelfth Section -->
-      <!-- Row with no margin -->
-      <!-- Column with width 12 for disclaimer -->
       <div class="row mx-auto text-center">
-        <!-- Disclaimer about the Cross and Flame trademark -->
         <em>
           The Cross and Flame is a registered trademark and the use is
           supervised by the General Council on Finance and Administration of The
@@ -736,15 +639,10 @@
           340029, Nashville, TN 37203-0029, Phone: 615-369-2334
         </em>
       </div>
-      <!-- End of Twelfth Section -->
-      <!-- End of content section -->
     </div>
   </body>
-  <!-- Start Footer -->
   <footer class="mb-sm-0 mb-md-3 mb-lg-3 container mx-auto p-0 bg">
-    <!-- Footer row -->
     <div class="row mx-auto bg-dark shadow text-white">
-      <!-- Left column for UMC logo -->
       <div
         class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
       >
@@ -752,7 +650,6 @@
           ><img height="60" width="60" src="./images/white+umc+logo.png"
         /></a>
       </div>
-      <!-- Center column for copyright information -->
       <div
         class="col-lg-8 col-md-10 col-sm-12 mt-2 align-self-center text-center text-md-start"
       >
@@ -761,20 +658,16 @@
           All rights reserved.
         </p>
       </div>
-      <!-- Right column for social media links -->
       <div class="col-lg-2 mt-2 text-center align-self-center text-lg-end">
         <p>Stay Connected</p>
       </div>
       <div
         class="col-lg-1 mt-2 ps-lg-0 mb-3 text-center text-lg-start align-self-center"
       >
-        <!-- Social media link -->
         <a href="https://www.facebook.com/profile.php?id=100064317144537"
           ><img height="35" width="35" src="./images/facebook.png"
         /></a>
       </div>
     </div>
   </footer>
-  <!-- End Footer -->
 </html>
-<!-- End of HTML Document -->
