--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="preload"
-      href="./images/websitebanner.webp"
-      as="image"
-      fetchpriority="high"
-    />
-    <link
-      rel="preload"
-      href="./images/websitebanner.jpg"
-      as="image"
-      fetchpriority="high"
-    />
     <script src="navbar.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
@@ -43,17 +31,7 @@
     />
     <link rel="icon" href="./images/umc-logo.png" />
   </head>
-  <div id="banner" class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0">
-    <picture>
-      <source srcset="./images/websitebanner.webp" type="image/webp" />
-      <source srcset="./images/websitebanner.jpg" type="image/jpeg" />
-      <img
-        class="w-100"
-        src="./images/websitebanner.jpg"
-        fetchpriority="high"
-      />
-    </picture>
-  </div>
+  <div id="banner" class="mt-sm-0 mt-md-3 mt-lg-3 container mx-auto p-0"></div>
   <div id="navbar-container" class="container mx-auto p-0">
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-dark"
