--- a/missing.html
+++ b/missing.html
@@ -18,7 +18,7 @@
     <link rel="icon" href="./images/umc-logo.png" />
     <title>404 (Page Not Found) Error</title>
   </head>
-  <body class="bg">
+  <body class="bg-2">
     <div id="navbar-container">
       <nav
         class="navbar navbar-expand-lg navbar-dark bg-dark"
