--- a/missing.html
+++ b/missing.html
@@ -174,7 +174,7 @@
         </h5>
       </div>
     </div>
-    <footer class="fixed-bottom">
+    <footer class="bottom-0 position-absolute w-100">
       <div class="row mx-auto bg-dark shadow text-white">
         <div
           class="col-lg-1 col-md-2 col-sm-12 mt-2 mb-2 align-self-center text-center"
