--- a/ministries.html
+++ b/ministries.html
@@ -726,7 +726,7 @@
         <div class="col">
           <div class="card shadow-sm bg-dark text-white h-100">
             <div class="card-body d-flex flex-column justify-content-between">
-              <p class="card-text">Children"s Christmas Program</p>
+              <p class="card-text">Children's Christmas Program</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <a
