--- a/3rdGradeBibleClass.html
+++ b/3rdGradeBibleClass.html
@@ -16,7 +16,9 @@
   <link rel="icon" href="./images/umc-logo.png" />
 
   <!-- Linking required Javascript files -->
-  <script src="navbar.js" defer></script>
+  <script src="./scripts/navbar.js" defer></script>
+  <script src="./scripts/footer.js" defer></script>
+  <script src="./scripts/search.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
   <!-- Linking required CSS files -->
