--- a/building-request.html
+++ b/building-request.html
@@ -16,7 +16,10 @@
   <link rel="icon" href="./images/umc-logo.png" />
 
   <!-- Linking required Javascript files -->
-  <script src="navbar.js" defer></script>
+  <script src="./scripts/navbar.js" defer></script>
+  <script src="./scripts/footer.js" defer></script>
+  <script src="./scripts/search.js" defer></script>
+  <script src="./scripts/forms.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/libphonenumber-js@1.10.57/bundle/libphonenumber-js.min.js"></script>
@@ -26,100 +29,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
   <link rel="stylesheet" href="./index.css" />
 
-  <script>
-
-    function handleSubmit() {
-      // Checks if at least 1 checkbox is checked and cancels submission if not
-      if (!CheckForCheckedCheckbox()) {
-        return false;
-      }
-      // Formats Date For Submission
-      formatDate();
-      // Ensure phone number is formatted correctly before submitting
-      formatPhone();
-
-      return true;
-    }
-    // Formats Phone Number
-    function formatPhone(event) {
-      if (event && (event.keyCode == 46 || event.keyCode == 8)) {
-        return;
-      }
-      const phoneInput = document.getElementById("field-792704759794cbb");
-      const phoneString = new libphonenumber.AsYouType("US").input(phoneInput.value);
-      phoneInput.value = phoneString;
-
-    }
-
-
-    // Sets end date to selected start date if empty or before start date
-    function checkDate() {
-      var startDateInput = document.getElementById("date");
-      var startDate = new Date(startDateInput.value);
-      var endDateInput = document.getElementById("date2");
-      var endDate = new Date(endDateInput.value);
-      endDateInput.setAttribute("min", startDate.toISOString().slice(0, 16));
-
-      // Check if end time is not set or if it's set to a date before start time
-      if (!endDateInput.value || endDate < startDate) {
-        endDateInput.value = startDateInput.value; // Set end time to start time
-      }
-    }
-
-    function formatDate() {
-      // Get the date input value
-      var startDate = new Date(document.getElementById("date").value);
-      var endDate = new Date(document.getElementById("date2").value);
-
-      // Formats the date inputs
-      var formattedDate =
-        startDate.toLocaleDateString("en-US") +
-        " at " +
-        startDate.toLocaleTimeString("en-US", {
-          hour: "numeric",
-          minute: "2-digit",
-          hour12: true,
-        }) +
-        " to " +
-        endDate.toLocaleDateString("en-US") +
-        " at " +
-        endDate.toLocaleTimeString("en-US", {
-          hour: "numeric",
-          minute: "2-digit",
-          hour12: true,
-        });
-      // Set the formatted date to the input
-      document.getElementById("field-c5b0d72b8c09b1c").value = formattedDate;
-      // Disable Date Fields So Not Included In Submission
-      document.getElementById("date").disabled = true;
-      document.getElementById("date2").disabled = true;
-    }
-    // Checks if at least one checkbox is checked
-    function CheckForCheckedCheckbox() {
-      var checkBoxes = document.getElementsByClassName("form-check-input");
-      var isChecked = false;
-      for (var i = 0; i < checkBoxes.length; i++) {
-        if (checkBoxes[i].checked) {
-          isChecked = true;
-        }
-      }
-      if (isChecked) {
-        return true;
-      } else {
-        alert("Please select at least 1 room that will be needed!");
-        return false;
-      }
-    }
-    // Checks if phone number field input is a number and rejects it if it is not
-    function isNumber(evt) {
-      evt = (evt) ? evt : window.event;
-      var charCode = (evt.which) ? evt.which : evt.keyCode;
-      if (charCode > 31 && (charCode < 48 || charCode > 57)) {
-        return false;
-      }
-      return true;
-    }
-  </script>
 </head>
 
 <body>
@@ -263,7 +172,8 @@
       </div>
     </div>
     <!-- Form -->
-    <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8" onsubmit="return handleSubmit()">
+    <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8"
+      onsubmit="return handleSubmit('field-792704759794cbb')">
       <!-- Hidden Inputs -->
       <div>
         <input type="hidden" name="acctid" id="acctid" value="u7p9qzi9dh3ql0yy" />
@@ -280,8 +190,8 @@
       </div>
       <!-- Phone Number Field -->
       <div class="form-floating mb-3">
-        <input type="tel" class="form-control" id="field-792704759794cbb" placeholder="Phone Number" name="field-792704759794cbb" onkeyup="formatPhone(event)"
-          onkeypress=" return isNumber(event)" maxlength="14" required />
+        <input type="tel" class="form-control" id="field-792704759794cbb" placeholder="Phone Number" name="field-792704759794cbb"
+          onkeyup="formatPhone(event, 'field-792704759794cbb')" onkeypress=" return isNumber(event)" maxlength="14" required />
         <label for="field-792704759794cbb">Phone Number</label>
       </div>
       <!-- Email Field -->
