--- a/information-request.html
+++ b/information-request.html
@@ -16,7 +16,10 @@
   <link rel="icon" href="./images/umc-logo.png" />
 
   <!-- Linking required Javascript files -->
-  <script src="navbar.js" defer></script>
+  <script src="./scripts/navbar.js" defer></script>
+  <script src="./scripts/footer.js" defer></script>
+  <script src="./scripts/search.js" defer></script>
+  <script src="./scripts/forms.js" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/libphonenumber-js@1.10.57/bundle/libphonenumber-js.min.js"></script>
@@ -25,26 +28,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
   <link rel="stylesheet" href="./index.css" />
-
-  <script>
-    function formatPhone(event) {
-      if (event && (event.keyCode == 46 || event.keyCode == 8)) {
-        return;
-      }
-      const phoneInput = document.getElementById("field-96b2c9af1499026");
-      const phoneString = new libphonenumber.AsYouType("US").input(phoneInput.value);
-      phoneInput.value = phoneString;
-
-    }
-    function isNumber(evt) {
-      evt = (evt) ? evt : window.event;
-      var charCode = (evt.which) ? evt.which : evt.keyCode;
-      if (charCode > 31 && (charCode < 48 || charCode > 57)) {
-        return false;
-      }
-      return true;
-    }
-  </script>
 </head>
 
 <body>
@@ -188,7 +171,8 @@
       </div>
     </div>
     <!-- Form -->
-    <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8" onsubmit="formatPhone()">
+    <form enctype="multipart/form-data" method="post" action="http://www.response-o-matic.com/mail.php" accept-charset="UTF-8"
+      onsubmit="formatPhone('field-96b2c9af1499026')">
       <!-- Hidden Inputs -->
       <div>
         <input type="hidden" name="acctid" id="acctid" value="u7p9qzi9dh3ql0yy" />
@@ -212,8 +196,8 @@
       </div>
       <!-- Phone Number Field -->
       <div class="form-floating mb-3">
-        <input type="tel" class="form-control" id="field-96b2c9af1499026" placeholder="Phone" name="field-96b2c9af1499026" onkeyup="formatPhone(event)"
-          onkeypress=" return isNumber(event)" maxlength="14" required />
+        <input type="tel" class="form-control" id="field-96b2c9af1499026" placeholder="Phone" name="field-96b2c9af1499026"
+          onkeyup="formatPhone(event, 'field-96b2c9af1499026')" onkeypress=" return isNumber(event)" maxlength="14" required />
         <label for="field-96b2c9af1499026">Phone</label>
       </div>
       <!-- Requested Info Field -->
