--- a/3rdGradeBibleClass.html
+++ b/3rdGradeBibleClass.html
@@ -24,7 +24,7 @@
   <!-- Linking required CSS files -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/css/autoComplete.01.min.css" />
-  <link rel="stylesheet" href="./index.css" />
+  <link rel="stylesheet" href="./styles/styles.css" />
 </head>
 
 <body>
